[package]
name = "steamscrape"
version = "0.1.0"
authors = ["Massimiliano Torromeo <massimiliano.torromeo@gmail.com>"]

[dependencies]
clippy = { version = "*", optional = true }
reqwest = "0.8.4"
select = "0.4.2"
scraper = "0.4.0"
url = "1.6.0"
dotenv = "0.10.1"
serde_json = "1.0.9"
clap = "2.29.2"
log = "0.4.1"
pretty_env_logger = "0.2.0"
failure = "0.1.1"
